--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Blog</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387865388422144"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-8387865388422144">
   </head>
   <body>
     <div id="root"></div>
